--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
   - coverage run -m unittest discover tests
 
 after_success:
-  - codecov
+  - codecov -t 3d819dfb-67bf-43af-86e4-36318ea64b32
