Add function is_archive

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 addopts = --doctest-modules --cov-report term-missing --cov-report html --cov arlib
 filterwarnings =
     ignore::PendingDeprecationWarning
-testpaths = tests
+testpaths = tests arlib
