--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ matrix:
     - python: pypy3
 
 install:
+  - pip install -r requirements.txt
   - pip install python-coveralls
   - pip install pytest pytest-cov
 
