--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ matrix:
     - python: pypy3
 
 install:
+  - pip install --upgrade pip
   - pip install -r requirements.txt
-  - pip install python-coveralls
-  - pip install pytest pytest-cov
+  - pip install --upgrade pytest pytest-cov python-coveralls
 
 script:
-  - pytest --cov=./
+  - pytest
 
 after_success:
   - coveralls
