Add functionality to extract members (#10)
* Add method extract to all classes

* Update docs

* Add tests

* Try to fix a test at travis python 2.7

* Try to fix a test at travis python 2.7

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,8 +8,5 @@ omit=
 
 [report]
 exclude_lines =
-    pragma: no cover
-    return NotImplemented
-    raise NotImplementedError
+    pragma no cover
     pass
-    raise
